// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`populator composer succeeds for fixed iteration 1`] = `
{
  "name": "DevData",
  "populates": [
    {
      "actions": [
        {
          "alias": "org",
          "changeset": [
            {
              "kind": "basic",
              "name": "is_new",
              "setter": {
                "kind": "literal",
                "literal": {
                  "kind": "boolean",
                  "value": true,
                },
              },
            },
            {
              "kind": "basic",
              "name": "name",
              "setter": {
                "kind": "literal",
                "literal": {
                  "kind": "string",
                  "value": "test name",
                },
              },
            },
          ],
          "isPrimary": false,
          "kind": "create-one",
          "model": "Org",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "org",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
          "targetPath": [
            "Org",
          ],
        },
      ],
      "populates": [],
      "repeater": {
        "alias": undefined,
        "end": 5,
        "start": 1,
      },
      "target": {
        "alias": "org",
        "identifyWith": {
          "paramName": "org_id",
          "path": [
            "id",
          ],
          "type": "integer",
        },
        "kind": "model",
        "name": "Org",
        "namePath": [
          "Org",
        ],
        "retType": "Org",
      },
    },
  ],
}
`;

exports[`populator composer succeeds for nested iterations 1`] = `
{
  "name": "DevData",
  "populates": [
    {
      "actions": [
        {
          "alias": "org",
          "changeset": [
            {
              "kind": "basic",
              "name": "is_new",
              "setter": {
                "kind": "literal",
                "literal": {
                  "kind": "boolean",
                  "value": true,
                },
              },
            },
            {
              "kind": "basic",
              "name": "name",
              "setter": {
                "kind": "literal",
                "literal": {
                  "kind": "string",
                  "value": "test name",
                },
              },
            },
          ],
          "isPrimary": false,
          "kind": "create-one",
          "model": "Org",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "org",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
          "targetPath": [
            "Org",
          ],
        },
      ],
      "populates": [
        {
          "actions": [
            {
              "alias": "repo",
              "changeset": [
                {
                  "kind": "basic",
                  "name": "org_id",
                  "setter": {
                    "kind": "alias-reference",
                    "path": [
                      "org",
                      "id",
                    ],
                    "source": "alias",
                  },
                },
                {
                  "kind": "basic",
                  "name": "name",
                  "setter": {
                    "kind": "literal",
                    "literal": {
                      "kind": "string",
                      "value": "test name",
                    },
                  },
                },
              ],
              "isPrimary": false,
              "kind": "create-one",
              "model": "Repo",
              "select": [
                {
                  "alias": "id",
                  "expr": {
                    "kind": "identifier-path",
                    "namePath": [
                      "repo",
                      "id",
                    ],
                  },
                  "kind": "expression",
                  "type": {
                    "kind": "integer",
                    "nullable": false,
                  },
                },
              ],
              "targetPath": [
                "repos",
              ],
            },
          ],
          "populates": [],
          "repeater": {
            "alias": undefined,
            "end": 2000,
            "start": 20,
          },
          "target": {
            "alias": "repo",
            "identifyWith": {
              "paramName": "repo_id",
              "path": [
                "id",
              ],
              "type": "integer",
            },
            "kind": "relation",
            "name": "repos",
            "namePath": [
              "Org",
              "repos",
            ],
            "retType": "Repo",
          },
        },
      ],
      "repeater": {
        "alias": undefined,
        "end": 4,
        "start": 1,
      },
      "target": {
        "alias": "org",
        "identifyWith": {
          "paramName": "org_id",
          "path": [
            "id",
          ],
          "type": "integer",
        },
        "kind": "model",
        "name": "Org",
        "namePath": [
          "Org",
        ],
        "retType": "Org",
      },
    },
  ],
}
`;

exports[`populator composer succeeds for nested populators 1`] = `
{
  "name": "DevData",
  "populates": [
    {
      "actions": [
        {
          "alias": "org",
          "changeset": [
            {
              "kind": "basic",
              "name": "name",
              "setter": {
                "kind": "literal",
                "literal": {
                  "kind": "string",
                  "value": "test name",
                },
              },
            },
          ],
          "isPrimary": false,
          "kind": "create-one",
          "model": "Org",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "org",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
            {
              "alias": "name",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "org",
                  "name",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "string",
                "nullable": false,
              },
            },
          ],
          "targetPath": [
            "Org",
          ],
        },
      ],
      "populates": [
        {
          "actions": [
            {
              "alias": "repo",
              "changeset": [
                {
                  "kind": "basic",
                  "name": "org_id",
                  "setter": {
                    "kind": "alias-reference",
                    "path": [
                      "org",
                      "id",
                    ],
                    "source": "alias",
                  },
                },
                {
                  "kind": "basic",
                  "name": "name",
                  "setter": {
                    "kind": "alias-reference",
                    "path": [
                      "org",
                      "name",
                    ],
                    "source": "alias",
                  },
                },
              ],
              "isPrimary": false,
              "kind": "create-one",
              "model": "Repo",
              "select": [
                {
                  "alias": "id",
                  "expr": {
                    "kind": "identifier-path",
                    "namePath": [
                      "repo",
                      "id",
                    ],
                  },
                  "kind": "expression",
                  "type": {
                    "kind": "integer",
                    "nullable": false,
                  },
                },
                {
                  "alias": "name",
                  "expr": {
                    "kind": "identifier-path",
                    "namePath": [
                      "repo",
                      "name",
                    ],
                  },
                  "kind": "expression",
                  "type": {
                    "kind": "string",
                    "nullable": false,
                  },
                },
              ],
              "targetPath": [
                "repos",
              ],
            },
          ],
          "populates": [
            {
              "actions": [
                {
                  "alias": "issue",
                  "changeset": [
                    {
                      "kind": "basic",
                      "name": "repo_id",
                      "setter": {
                        "kind": "alias-reference",
                        "path": [
                          "repo",
                          "id",
                        ],
                        "source": "alias",
                      },
                    },
                    {
                      "kind": "basic",
                      "name": "title",
                      "setter": {
                        "kind": "alias-reference",
                        "path": [
                          "repo",
                          "name",
                        ],
                        "source": "alias",
                      },
                    },
                  ],
                  "isPrimary": false,
                  "kind": "create-one",
                  "model": "Issue",
                  "select": [
                    {
                      "alias": "id",
                      "expr": {
                        "kind": "identifier-path",
                        "namePath": [
                          "issue",
                          "id",
                        ],
                      },
                      "kind": "expression",
                      "type": {
                        "kind": "integer",
                        "nullable": false,
                      },
                    },
                  ],
                  "targetPath": [
                    "issues",
                  ],
                },
              ],
              "populates": [],
              "repeater": {
                "end": 1,
                "start": 1,
              },
              "target": {
                "alias": "issue",
                "identifyWith": {
                  "paramName": "issue_id",
                  "path": [
                    "id",
                  ],
                  "type": "integer",
                },
                "kind": "relation",
                "name": "issues",
                "namePath": [
                  "Org",
                  "repos",
                  "issues",
                ],
                "retType": "Issue",
              },
            },
          ],
          "repeater": {
            "end": 1,
            "start": 1,
          },
          "target": {
            "alias": "repo",
            "identifyWith": {
              "paramName": "repo_id",
              "path": [
                "id",
              ],
              "type": "integer",
            },
            "kind": "relation",
            "name": "repos",
            "namePath": [
              "Org",
              "repos",
            ],
            "retType": "Repo",
          },
        },
      ],
      "repeater": {
        "end": 1,
        "start": 1,
      },
      "target": {
        "alias": "org",
        "identifyWith": {
          "paramName": "org_id",
          "path": [
            "id",
          ],
          "type": "integer",
        },
        "kind": "model",
        "name": "Org",
        "namePath": [
          "Org",
        ],
        "retType": "Org",
      },
    },
  ],
}
`;

exports[`populator composer succeeds for range iteration (only end) 1`] = `
{
  "name": "DevData",
  "populates": [
    {
      "actions": [
        {
          "alias": "org",
          "changeset": [
            {
              "kind": "basic",
              "name": "is_new",
              "setter": {
                "kind": "literal",
                "literal": {
                  "kind": "boolean",
                  "value": true,
                },
              },
            },
            {
              "kind": "basic",
              "name": "name",
              "setter": {
                "kind": "literal",
                "literal": {
                  "kind": "string",
                  "value": "test name",
                },
              },
            },
          ],
          "isPrimary": false,
          "kind": "create-one",
          "model": "Org",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "org",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
          "targetPath": [
            "Org",
          ],
        },
      ],
      "populates": [],
      "repeater": {
        "alias": undefined,
        "end": 3,
        "start": 1,
      },
      "target": {
        "alias": "org",
        "identifyWith": {
          "paramName": "org_id",
          "path": [
            "id",
          ],
          "type": "integer",
        },
        "kind": "model",
        "name": "Org",
        "namePath": [
          "Org",
        ],
        "retType": "Org",
      },
    },
  ],
}
`;

exports[`populator composer succeeds for range iteration 1`] = `
{
  "name": "DevData",
  "populates": [
    {
      "actions": [
        {
          "alias": "org",
          "changeset": [
            {
              "kind": "basic",
              "name": "is_new",
              "setter": {
                "kind": "literal",
                "literal": {
                  "kind": "boolean",
                  "value": true,
                },
              },
            },
            {
              "kind": "basic",
              "name": "name",
              "setter": {
                "kind": "literal",
                "literal": {
                  "kind": "string",
                  "value": "test name",
                },
              },
            },
          ],
          "isPrimary": false,
          "kind": "create-one",
          "model": "Org",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "org",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
          "targetPath": [
            "Org",
          ],
        },
      ],
      "populates": [],
      "repeater": {
        "alias": undefined,
        "end": 3,
        "start": 1,
      },
      "target": {
        "alias": "org",
        "identifyWith": {
          "paramName": "org_id",
          "path": [
            "id",
          ],
          "type": "integer",
        },
        "kind": "model",
        "name": "Org",
        "namePath": [
          "Org",
        ],
        "retType": "Org",
      },
    },
  ],
}
`;

exports[`populator composer succeeds for simple populator 1`] = `
{
  "name": "DevData",
  "populates": [
    {
      "actions": [
        {
          "alias": "org",
          "changeset": [
            {
              "kind": "basic",
              "name": "slug",
              "setter": {
                "kind": "literal",
                "literal": {
                  "kind": "string",
                  "value": "custom-org",
                },
              },
            },
            {
              "kind": "basic",
              "name": "name",
              "setter": {
                "args": [
                  {
                    "kind": "literal",
                    "literal": {
                      "kind": "string",
                      "value": "test name ",
                    },
                  },
                  {
                    "kind": "identifier-path",
                    "namePath": [
                      "slug",
                    ],
                  },
                ],
                "kind": "function",
                "name": "concat",
              },
            },
            {
              "kind": "basic",
              "name": "description",
              "setter": {
                "hook": {
                  "args": [
                    {
                      "kind": "basic",
                      "name": "name",
                      "setter": {
                        "kind": "identifier-path",
                        "namePath": [
                          "name",
                        ],
                      },
                    },
                  ],
                  "hook": {
                    "inline": "'Description of' + name",
                    "kind": "inline",
                  },
                },
                "kind": "hook",
              },
            },
          ],
          "isPrimary": false,
          "kind": "create-one",
          "model": "Org",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "org",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
          "targetPath": [
            "Org",
          ],
        },
      ],
      "populates": [],
      "repeater": {
        "end": 1,
        "start": 1,
      },
      "target": {
        "alias": "org",
        "identifyWith": {
          "paramName": "org_id",
          "path": [
            "id",
          ],
          "type": "integer",
        },
        "kind": "model",
        "name": "Org",
        "namePath": [
          "Org",
        ],
        "retType": "Org",
      },
    },
  ],
}
`;

exports[`populator composer succeeds with iterator variables in the context 1`] = `
{
  "name": "Dev",
  "populates": [
    {
      "actions": [
        {
          "alias": "org",
          "changeset": [
            {
              "kind": "basic",
              "name": "name2",
              "setter": {
                "kind": "identifier-path",
                "namePath": [
                  "name",
                ],
              },
            },
            {
              "kind": "basic",
              "name": "index",
              "setter": {
                "kind": "alias-reference",
                "path": [
                  "oIter",
                  "current",
                ],
                "source": "alias",
              },
            },
            {
              "kind": "basic",
              "name": "name",
              "setter": {
                "hook": {
                  "args": [
                    {
                      "kind": "basic",
                      "name": "oIter",
                      "setter": {
                        "kind": "alias-reference",
                        "path": [
                          "oIter",
                        ],
                        "source": "alias",
                      },
                    },
                  ],
                  "hook": {
                    "inline": "'Org ' + oIter.current",
                    "kind": "inline",
                  },
                },
                "kind": "hook",
              },
            },
          ],
          "isPrimary": false,
          "kind": "create-one",
          "model": "Org",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "org",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
          "targetPath": [
            "Org",
          ],
        },
      ],
      "populates": [
        {
          "actions": [
            {
              "alias": "repo",
              "changeset": [
                {
                  "kind": "basic",
                  "name": "org_id",
                  "setter": {
                    "kind": "alias-reference",
                    "path": [
                      "org",
                      "id",
                    ],
                    "source": "alias",
                  },
                },
                {
                  "kind": "basic",
                  "name": "index",
                  "setter": {
                    "kind": "alias-reference",
                    "path": [
                      "rIter",
                      "current",
                    ],
                    "source": "alias",
                  },
                },
                {
                  "kind": "basic",
                  "name": "org_index",
                  "setter": {
                    "kind": "alias-reference",
                    "path": [
                      "oIter",
                      "current",
                    ],
                    "source": "alias",
                  },
                },
              ],
              "isPrimary": false,
              "kind": "create-one",
              "model": "Repo",
              "select": [
                {
                  "alias": "id",
                  "expr": {
                    "kind": "identifier-path",
                    "namePath": [
                      "repo",
                      "id",
                    ],
                  },
                  "kind": "expression",
                  "type": {
                    "kind": "integer",
                    "nullable": false,
                  },
                },
              ],
              "targetPath": [
                "repos",
              ],
            },
          ],
          "populates": [],
          "repeater": {
            "alias": "rIter",
            "end": 5,
            "start": 1,
          },
          "target": {
            "alias": "repo",
            "identifyWith": {
              "paramName": "repo_id",
              "path": [
                "id",
              ],
              "type": "integer",
            },
            "kind": "relation",
            "name": "repos",
            "namePath": [
              "Org",
              "repos",
            ],
            "retType": "Repo",
          },
        },
      ],
      "repeater": {
        "alias": "oIter",
        "end": 10,
        "start": 1,
      },
      "target": {
        "alias": "org",
        "identifyWith": {
          "paramName": "org_id",
          "path": [
            "id",
          ],
          "type": "integer",
        },
        "kind": "model",
        "name": "Org",
        "namePath": [
          "Org",
        ],
        "retType": "Org",
      },
    },
  ],
}
`;
